fix: sort toolbar wrapping on smaller screens

--- a/src/app/shared/components/header/search-bar/search-bar.component.scss
+++ b/src/app/shared/components/header/search-bar/search-bar.component.scss
@@ -3,8 +3,6 @@
   align-items: center;
   justify-content: center;
 }
-input {
-}
 
 input {
   border: none;
